[package]
name = "test_mango"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
mongodb = { version = "2.0", default-features = false,  features = ["sync"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4"  }
reqwest = { version= "0.10.0-alpha.2", features = ["blocking"] } 